--- a/PlottingScripts/ProcessPlotData.Rmd
+++ b/PlottingScripts/ProcessPlotData.Rmd
@@ -26,6 +26,7 @@ library(cowplot)
 library(data.table)
 library(tidyverse)
 library(purrr)
+library(lfa)
 
 #Directories
 DataPath <- '~/Documents/QualityPaper/ProcessedData/'
@@ -527,6 +528,59 @@ saveRDS(SNP,
 SNP
 INDEL
 ```
+##Extract Significant Positions from 1kGP Data
+```{bash}
+DataPath='/Users/luke/Documents/QualityPaper/ProcessedData'
+RawDataPath='/Users/luke/genomes/genomes/hg19/phase3'
+VCF='.phase3_shapeit2_mvncall_integrated_v5a.20130502.genotypes.vcf.gz'
+
+#GetHeader
+zgrep '^#' $RawDataPath/ALL.chr22$VCF > $DataPath/Significant_Positions.vcf
+
+#AddGenotypes
+for f in `seq 1 22`;
+do echo $f;
+bcftools view -R $DataPath/Significant_Positions.txt \
+$RawDataPath/ALL.chr${f}$VCF \
+| grep -v "^#" \
+>> $DataPath/Significant_Positions.vcf ; \
+done
+
+#bcftools doesn't take rsID
+#this deals with indels and other mulitallelic variants
+vcftools \
+--vcf $DataPath/Significant_Positions.vcf \
+--snps $DataPath/Significant_rsID.txt \
+--recode --recode-INFO-all \
+--out $DataPath/Significant_Positions
+
+/Users/luke/bin/plink_mac/plink \
+--vcf $DataPath/Significant_Positions.recode.vcf \
+--recode \
+--out $DataPath/Significant_Positions
+
+```
+```{r}
+data_bim <- fread(paste0(DataPath,
+                         'Significant_Positions.bim'), 
+                  col.names = c('Chr','rsID','X',
+                                'Pos','Ref','Alt')) %>%
+  select(rsID)
+
+data_fam <- fread(paste0(DataPath,
+                         'Significant_Positions.fam'), 
+                  col.names = c('familyID','sample',
+                                'father','mother',
+                                'sex','pheno')) %>%
+  select(sample)
+
+data_genotype <- read.bed(paste0(DataPath,'Significant_Positions'))
+rownames(data_genotype) <- data_bim$rsID
+colnames(data_genotype) <- data_fam$sample
+data_genotype[1:5,1:5]
+
+```
+
 ##Compare Over and Under Qual 30
 ```{r}
 #read Genotypes
